--- a/MJHSoccer/Code/index.html
+++ b/MJHSoccer/Code/index.html
@@ -70,7 +70,7 @@
                 <i class="fa fa-caret-down"></i>
               </button>
               <ul class="nav-link-wrapper-twodown">
-                <li><a href="roster1718.htm">Roster</a></li>
+                <li><a href="roster1718.html">Roster</a></li>
                 <li><a href="matches1718.html">Schedule</a></li>
                 <li><a href="pictures1718.html">Pictures</a></li>
               </ul>
@@ -81,7 +81,7 @@
                 <i class="fa fa-caret-down"></i>
               </button>
               <ul class="nav-link-wrapper-twodown">
-                <li><a href="roster1617.htm">Roster</a></li>
+                <li><a href="roster1617.html">Roster</a></li>
                 <li><a href="matches1617.html">Schedule</a></li>
                 <li><a href="pictures1617.html">Pictures</a></li>
               </ul>
