Roster visuals | previous roster links

--- a/MJHSoccer/Code/roster.html
+++ b/MJHSoccer/Code/roster.html
@@ -106,11 +106,93 @@
   <div class="content-wrapper">
     <div class="heading">2019-2020 Roster</div>
 
+    <div class="heading1">
+      TEAM NOT MADE | TRYOUTS NOT HOSTED
+    </div>
+
     <div class="rosterColumn">
       <div class="rosterTeam">
-        <div class="heading1">TEAM NOT MADE | TRYOUTS NOT YET HOSTED
+        <div class="AttackersCol">
+          <div class="heading1left">
+            ATTACKERS:
+          </div>
+          <ul style="list-style-type:disc">
+            <li style="font-weight:bold">STARTERS:
+              <ol style="font-weight:bold">
+
+              </ol>
+            </li>
+            <br />
+            <li style="font-weight:bold">NON-STARTERS:
+              <ol style="font-weight:normal">
+
+              </ol>
+            </li>
+          </ul>
+        </div>
+        <div class="MidfieldersCol">
+          <div class="heading1">
+            MIDFIELDERS:
+          </div>
+          <ul style="list-style-type:disc">
+            <li style="font-weight:bold">STARTERS:
+              <ol style="font-weight:bold">
+
+              </ol>
+            </li>
+            <br />
+            <li style="font-weight:bold">NON-STARTERS:
+              <ol style="font-weight:normal">
+
+              </ol>
+            </li>
+          </ul>
+        </div>
+        <div class="DefendersCol">
+          <div class="heading1">
+            DEFENDERS:
+          </div>
+          <ul style="list-style-type:disc">
+            <li style="font-weight:bold">STARTERS:
+              <ol style="font-weight:bold">
+
+              </ol>
+            </li>
+            <br />
+            <li style="font-weight:bold">NON-STARTERS:
+              <ol style="font-weight:normal">
+
+              </ol>
+            </li>
+          </ul>
         </div>
       </div>
+      <div class="GoaliesRow">
+        <div class="heading1">
+          GOALKEEPERS:
+        </div>
+        <ul style="list-style-type:disc">
+          <li style="font-weight:bold">STARTERS:
+            <ol style="font-weight:bold">
+
+            </ol>
+          </li>
+          <li style="font-weight:bold">NON-STARTERS
+            <ol style="font-weight:normal">
+
+            </ol>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="linksTeam">
+      <a href="roster.html">Roster</a>
+      <br />
+      <br />
+      <a href="schedule.html">Schedule</a>
+      <br />
+      <br />
+      <a href="pictures.html">Pictures</a>
     </div>
   </div>
 </body>
