--- a/MJHSoccer/Code/roster1718.html
+++ b/MJHSoccer/Code/roster1718.html
@@ -103,6 +103,87 @@
       </div>
     </div>
   </div>
+
+  <div class="content-wrapper">
+    <div class="heading">2017-2018 Roster</div>
+
+    <div class="rosterColumn">
+      <div class="rosterTeam">
+        <div class="AttackersCol">
+          <div class="heading1left">
+            ATTACKERS:
+          </div>
+          <ul style="list-style-type:disc">
+            <li style="font-weight:bold">STARTERS:
+              <ol style="font-weight:bold">
+
+              </ol>
+            </li>
+            <br />
+            <li style="font-weight:bold">NON-STARTERS:
+              <ol style="font-weight:normal">
+
+              </ol>
+            </li>
+          </ul>
+        </div>
+        <div class="MidfieldersCol">
+          <div class="heading1">
+            MIDFIELDERS:
+          </div>
+          <ul style="list-style-type:disc">
+            <li style="font-weight:bold">STARTERS:
+              <ol style="font-weight:bold">
+
+              </ol>
+            </li>
+            <br />
+            <li style="font-weight:bold">NON-STARTERS:
+              <ol style="font-weight:normal">
+
+              </ol>
+            </li>
+          </ul>
+        </div>
+        <div class="DefendersCol">
+          <div class="heading1">
+            DEFENDERS:
+          </div>
+          <ul style="list-style-type:disc">
+            <li style="font-weight:bold">STARTERS:
+              <ol style="font-weight:bold">
+
+              </ol>
+            </li>
+            <br />
+            <li style="font-weight:bold">NON-STARTERS:
+              <ol style="font-weight:normal">
+
+              </ol>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="GoaliesRow">
+        <div class="heading1">
+          GOALKEEPERS:
+        </div>
+        <ul style="list-style-type:disc">
+          <li style="font-weight:bold">STARTERS:
+            <ol style="font-weight:bold">
+
+            </ol>
+          </li>
+          <br />
+          <li style="font-weight:bold">NON-STARTERS
+            <ol style="font-weight:normal">
+
+            </ol>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
