Pictures and roster

--- a/MJHSoccer/Code/pictures.html
+++ b/MJHSoccer/Code/pictures.html
@@ -105,10 +105,15 @@
     <div class="content-wrapper">
       <div class="heading">2019-2020 Pictures</div>
 
-      <div class="schedule-column">
-        <div class="schedule">
+      <div class="pictures-column">
+        <div class="pictures">
           <div class="heading1">
             NO GAMES PLAYED | NO PICTURES
+          </div>
+          <div class="PicturesCol">
+            <div class="AllImages">Insert Image Here</div>
+            <div class="AllImages">Insert Image Here</div>
+            <div class="AllImages">Insert Image Here</div>
           </div>
         </div>
       </div>
