--- a/MJHSoccer/Code/pictures1617.html
+++ b/MJHSoccer/Code/pictures1617.html
@@ -101,6 +101,23 @@
         </div>
       </div>
     </div>
+
+    <div class="content-wrapper">
+      <div class="heading">2018-2019 Pictures</div>
+
+      <div class="pictures-column">
+        <div class="pictures">
+          <div class="heading1">
+            NO GAMES PLAYED | NO PICTURES
+          </div>
+          <div class="PicturesCol">
+            <div class="AllImages">Insert Image Here</div>
+            <div class="AllImages">Insert Image Here</div>
+            <div class="AllImages">Insert Image Here</div>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 
 </html>
