--- a/MJHSoccer/Code/roster1819.html
+++ b/MJHSoccer/Code/roster1819.html
@@ -123,7 +123,7 @@
               <li style="font-weight:bold">NON-STARTERS:
                 <ol style="font-weight:normal">
                   <li>ST - Josh ?? #22</li>
-                  <li>ST - Roman Spolianksy #??</li>
+                  <li>ST - Roman Spolianksy #11</li>
                   <li>CF - Sean Dwyer #01</li>
                 </ol>
               </li>
@@ -192,7 +192,7 @@
             <li style="font-weight:bold">NON-STARTERS
               <ol style="font-weight:normal">
                 <li>Gabe Minkin #05</li>
-                <li>Roman Spolianksy #??</li>
+                <li>Roman Spolianksy #11</li>
               </ol>
             </li>
           </ul>
