--- a/MJHSoccer/Code/matches1718.html
+++ b/MJHSoccer/Code/matches1718.html
@@ -120,6 +120,12 @@
           Final result: 1st in parish
         </div>
       </div>
+      <div class="linksTeam">
+        <a href="roster1718.html">Roster</a>
+        <br />
+        <br />
+        <a href="pictures1718.html">Pictures</a>
+      </div>
     </div>
 </body>
 
