--- a/MJHSoccer/Code/matches1819.html
+++ b/MJHSoccer/Code/matches1819.html
@@ -269,6 +269,12 @@
           Final result: 2nd in parish
         </div>
       </div>
+      <div class="linksTeam">
+        <a href="roster1819.html">Roster</a>
+        <br />
+        <br />
+        <a href="pictures1819.html">Pictures</a>
+      </div>
     </div>
   </div>
 </body>
