--- a/MJHSoccer/Code/roster1617.html
+++ b/MJHSoccer/Code/roster1617.html
@@ -182,6 +182,12 @@
           </ul>
         </div>
       </div>
+      <div class="linksTeam">
+        <a href="matches1617.html">Schedule</a>
+        <br />
+        <br />
+        <a href="pictures1617.html">Pictures</a>
+      </div>
     </div>
 </body>
 
