--- a/MJHSoccer/Code/roster1819.html
+++ b/MJHSoccer/Code/roster1819.html
@@ -198,6 +198,12 @@
           </ul>
         </div>
       </div>
+      <div class="linksTeam">
+        <a href="matches1819.html">Schedule</a>
+        <br />
+        <br />
+        <a href="pictures1819.html">Pictures</a>
+      </div>
     </div>
 </body>
 
