--- a/MJHSoccer/Code/pictures.html
+++ b/MJHSoccer/Code/pictures.html
@@ -117,6 +117,12 @@
           </div>
         </div>
       </div>
+      <div class="linksTeam">
+        <a href="roster.html">Roster</a>
+        <br />
+        <br />
+        <a href="schedule.html">Schedule</a>
+      </div>
     </div>
   </div>
 </body>
