--- a/MJHSoccer/Code/pictures1617.html
+++ b/MJHSoccer/Code/pictures1617.html
@@ -117,6 +117,12 @@
           </div>
         </div>
       </div>
+      <div class="linksTeam">
+        <a href="roster1617.html">Roster</a>
+        <br />
+        <br />
+        <a href="matches1617.html">Schedule</a>
+      </div>
     </div>
 </body>
 
