--- a/MJHSoccer/Code/roster1718.html
+++ b/MJHSoccer/Code/roster1718.html
@@ -183,6 +183,12 @@
         </ul>
       </div>
     </div>
+    <div class="linksTeam">
+      <a href="matches1718.html">Schedule</a>
+      <br />
+      <br />
+      <a href="pictures1718.html">Pictures</a>
+    </div>
   </div>
 </body>
 
