--- a/MJHSoccer/Code/schedule.html
+++ b/MJHSoccer/Code/schedule.html
@@ -124,6 +124,12 @@
         </div>
       </div>
     </div>
+    <div class="linksTeam">
+      <a href="roster.html">Roster</a>
+      <br />
+      <br />
+      <a href="pictures.html">Pictures</a>
+    </div>
   </div>
 </body>
 
