--- a/MJHSoccer/Code/about.html
+++ b/MJHSoccer/Code/about.html
@@ -103,9 +103,40 @@
 
     <div class="content-wrapper">
       <div class="heading">Who We Are</div>
-      <div class="grid-items-wrapper">
-        <div class="grid-item-wrapper">
-
+      <div class="overview">
+        <div class="overview-text">
+        We are a historically good soccer program having fun and representing our school.
+        <br />
+        The past _ years we have secured top _ every year.
+        <br />
+        ...
+        </div>
+      </div>
+      <div class="AboutCol">
+        <div class="Previous results">
+          <div style="font-weight:bold">Previous results:</div>
+          <table>
+            <tr>
+              <th>Year</th>
+              <th>Result</th>
+              <th>Record</th>
+            </tr>
+            <tr>
+              <td id="about">2018-2019</td>
+              <td id="about">2nd in parish</td>
+              <td id="about">9-6-3 (4-1-0)</td>
+            </tr>
+            <tr>
+              <td id="about">2017-2018</td>
+              <td id="about">1st in parish</td>
+              <td id="about">?-?-? (?-?-?)</td>
+            </tr>
+            <tr>
+              <td id="about">2016-2017</td>
+              <td id="about">??? in parish</td>
+              <td id="about">?-?-? (?-?-?)</td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
