--- a/MJHSoccer/Code/matches1819.html
+++ b/MJHSoccer/Code/matches1819.html
@@ -217,8 +217,8 @@
             </tr>
             <tr id="Division">
               <td id="Division">01/09</td>
-              <td id="Division">Salmen</td>
-              <td id="Division">Salmen Junior High</td>
+              <td id="Division">St. Tammany</td>
+              <td id="Division">Salmen High</td>
               <td id="Win">Win ??</td>
               <td id="Division">Division</td>
             </tr>
@@ -267,6 +267,8 @@
           </table>
           <br />
           Final result: 2nd in parish
+          <br />
+          Final record: 9-6-3 (4-1-0 in parish)
         </div>
       </div>
       <div class="linksTeam">
