--- a/MJHSoccer/Code/the-team.html
+++ b/MJHSoccer/Code/the-team.html
@@ -121,7 +121,7 @@
           Divisional Placement (updated in real time): No games played
         </div>
       </div>
-      <div class="cool-pictures">
+      <div class="cool-picturesT">
         <div class="cool-pictures-title">
           COOL PICTURES
         </div>
