--- a/MJHSoccer/Code/alumni-of-the-week.html
+++ b/MJHSoccer/Code/alumni-of-the-week.html
@@ -101,6 +101,96 @@
         </div>
       </div>
     </div>
+
+    <div class="content-wrapper">
+      <div class="heading">
+        ALUM OF THE WEEK
+      </div>
+
+      <div class="AlumOfWeek">
+        <div class="overviewAlum">
+          <div class="alumWeekName">
+            INSERT NAME HERE
+          </div>
+          <div class="AlumOfWeekPic">
+            insert image here
+          </div>
+          <div class="alumWeekBio">
+            Insert bio here
+          </div>
+        </div>
+        <div class="contentAlumni"> <!-- TWO COLUMN INIT -->
+          <div class="alumWeekCollege">
+            <div class="whatCollege">
+              Insert college here
+            </div>
+            <br />
+            <div class="whatJob">
+              Insert potential job here
+            </div>
+            <br />
+            <div class="whatMajor">
+              insert major here
+            </div>
+          </div>
+          <div class="alumWeekDesc">
+            <div class="whatDidForTeam">
+              <div class="goalsScoredAlumWeek">
+                insert # goals here
+              </div>
+              <br />
+              <div class="assistsAlumWeek">
+                insert # assists here
+              </div>
+              <br />
+            </div>
+            <div class="BestMoments">
+              insert player's "best moment" here
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="linksTeam">
+        <div>
+          <a href="graduating-this-year.html">Graduating Alumni</a>
+        </div>
+        <div>
+          <a href="index.html">HOME</a>
+          <br />
+          <a href="about.html">About us</a>
+        </div>
+        <div>
+          <a href="the-team.html">The team</a>
+          <br />
+          <a href="roster.html">Roster</a>
+          <br />
+          <a href="schedule.html">Schedule</a>
+          <br />
+          <a href="pictures.html">Pictures</a>
+        </div>
+        <div>
+          <a href="roster1819.html">18/19 roster</a>
+          <br />
+          <a href="matches1819.html">18/19 schedule</a>
+          <br />
+          <a href="pictures1819.html">18/19 pictures</a>
+        </div>
+        <div>
+          <a href="roster1718.html">17/18 roster</a>
+          <br />
+          <a href="matches1718.html">17/18 schedule</a>
+          <br />
+          <a href="pictures1718.html">17/18 pictures</a>
+        </div>
+        <div>
+          <a href="roster1617.html">16/17 roster</a>
+          <br />
+          <a href="matches1617.html">16/17 schedule</a>
+          <br />
+          <a href="pictures1617.html">16/17 pictures</a>
+        </div>
+      </div>
+    </div>
 </body>
 
 </html>
