--- a/MJHSoccer/Code/matches1819.html
+++ b/MJHSoccer/Code/matches1819.html
@@ -272,10 +272,44 @@
         </div>
       </div>
       <div class="linksTeam">
-        <a href="roster1819.html">Roster</a>
-        <br />
-        <br />
-        <a href="pictures1819.html">Pictures</a>
+        <div>
+          <a href="graduating-this-year.html">Graduating this year</a>
+          <br />
+          <a href="alumni-of-the-week.html">Alumni of the week</a>
+        </div>
+        <div>
+          <a href="index.html">HOME</a>
+          <br />
+          <a href="about.html">About us</a>
+        </div>
+        <div>
+          <a href="the-team.html">The team</a>
+          <br />
+          <a href="roster.html">Roster</a>
+          <br />
+          <a href="schedule.html">Schedule</a>
+          <br />
+          <a href="pictures.html">Pictures</a>
+        </div>
+        <div>
+          <a href="roster1819.html">18/19 roster</a>
+          <br />
+          <a href="pictures1819.html">18/19 pictures</a>
+        </div>
+        <div>
+          <a href="roster1718.html">17/18 roster</a>
+          <br />
+          <a href="matches1718.html">17/18 schedule</a>
+          <br />
+          <a href="pictures1718.html">17/18 pictures</a>
+        </div>
+        <div>
+          <a href="roster1617.html">16/17 roster</a>
+          <br />
+          <a href="matches1617.html">16/17 schedule</a>
+          <br />
+          <a href="pictures1617.html">16/17 pictures</a>
+        </div>
       </div>
     </div>
   </div>
