--- a/MJHSoccer/Code/graduating-this-year.html
+++ b/MJHSoccer/Code/graduating-this-year.html
@@ -101,6 +101,77 @@
         </div>
       </div>
     </div>
+
+    <div class="content-wrapper">
+      <div class="heading">
+        Graduating Alumni
+      </div>
+
+      <div class="Graduating-soccer">
+        <table>
+          <tr>
+            <th>Name</th>
+            <th>Picture</th>
+            <th>Position(s) played</th>
+            <th>Goals scored</th>
+            <th>Assists</th>
+            <th>Future Job?</th>
+            <th>Majoring in?</th>
+            <th>E-mail</th>
+          </tr>
+          <tr>
+            <td id="alumniGrad">...</td>
+            <td id="alumniGrad">insert image here</td>
+            <td id="alumniGrad">...</td>
+            <td id="alumniGrad">...</td>
+            <td id="alumniGrad">...</td>
+            <td id="alumniGrad">...</td>
+            <td id="alumniGrad">...</td>
+            <td id="alumniGrad">alumni@mjh.com</td>
+          </tr>
+        </table>
+      </div>
+      <div class="linksTeam">
+        <div>
+          <a href="alumni-of-the-week.html">Alumni of the week</a>
+        </div>
+        <div>
+          <a href="index.html">HOME</a>
+          <br />
+          <a href="about.html">About us</a>
+        </div>
+        <div>
+          <a href="the-team.html">The team</a>
+          <br />
+          <a href="roster.html">Roster</a>
+          <br />
+          <a href="schedule.html">Schedule</a>
+          <br />
+          <a href="pictures.html">Pictures</a>
+        </div>
+        <div>
+          <a href="roster1819.html">18/19 roster</a>
+          <br />
+          <a href="matches1819.html">18/19 schedule</a>
+          <br />
+          <a href="pictures1819.html">18/19 pictures</a>
+        </div>
+        <div>
+          <a href="roster1718.html">17/18 roster</a>
+          <br />
+          <a href="matches1718.html">17/18 schedule</a>
+          <br />
+          <a href="pictures1718.html">17/18 pictures</a>
+        </div>
+        <div>
+          <a href="roster1617.html">16/17 roster</a>
+          <br />
+          <a href="matches1617.html">16/17 schedule</a>
+          <br />
+          <a href="pictures1617.html">16/17 pictures</a>
+        </div>
+      </div>
+    </div>
 </body>
 
 </html>
