--- a/MJHSoccer/Code/index.html
+++ b/MJHSoccer/Code/index.html
@@ -147,6 +147,7 @@
       </div>
     </div>
   </div>
+  <div class="linksTeam">
     <div>
       <a href="alumni-of-the-week.html">Alumni of the week</a>
       <br />
@@ -185,6 +186,7 @@
       <br />
       <a href="pictures1617.html">16/17 pictures</a>
     </div>
+  </div>
 </body>
 
 </html>
