--- a/MJHSoccer/Code/about.html
+++ b/MJHSoccer/Code/about.html
@@ -103,40 +103,84 @@
 
     <div class="content-wrapper">
       <div class="heading">Who We Are</div>
-      <div class="overview">
-        <div class="overview-text">
-        We are a historically good soccer program having fun and representing our school.
-        <br />
-        The past _ years we have secured top _ every year.
-        <br />
-        ...
+      <div class="about-content">
+        <div class="abtoverview">
+          <div class="AbtSchoolTitle">
+            About the team
+          </div>
+          <div class="overview-text">
+            We are a historically good soccer program having fun and representing our school.
+            <br>
+            <br />
+            The past _ years we have secured top _ every year.
+          </div>
         </div>
-      </div>
-      <div class="AboutCol">
-        <div class="Previous results">
-          <div style="font-weight:bold">Previous results:</div>
-          <table>
-            <tr>
-              <th>Year</th>
-              <th>Result</th>
-              <th>Record</th>
-            </tr>
-            <tr>
-              <td id="about">2018-2019</td>
-              <td id="about">2nd in parish</td>
-              <td id="about">9-6-3 (4-1-0)</td>
-            </tr>
-            <tr>
-              <td id="about">2017-2018</td>
-              <td id="about">1st in parish</td>
-              <td id="about">?-?-? (?-?-?)</td>
-            </tr>
-            <tr>
-              <td id="about">2016-2017</td>
-              <td id="about">??? in parish</td>
-              <td id="about">?-?-? (?-?-?)</td>
-            </tr>
-          </table>
+        <div class="AbtSchool">
+          <div class="AbtSchoolTitle">
+            About the school
+          </div>
+          <div class="AbtSchoolText">
+            Mandeville Junior High is located in Mandeville, Louisiana. We are a public school often ranked top 5 in education in the state.
+            <br>
+            Their website can be located at <a href="http://mandevillejunior.stpsb.org" style="color:white">mandevillejunior.stpsb.org</a>.
+            <br>
+            <br />
+            We are located in the St. Tammany Parish School District, which is often ranked among the top 5 school districts in the state.
+            <br>
+            Their website can be found at <a href="http://stpsb.org" style="color:white">stpsb.org</a>.
+          </div>
+        </div>
+        <div class="AboutCol">
+          <div class="Previous results">
+            <div style="font-weight:bold">Previous results:</div>
+            <table>
+              <tr>
+                <th>Year</th>
+                <th>Result</th>
+                <th>Record</th>
+              </tr>
+              <tr>
+                <td id="about">2018-2019</td>
+                <td id="about">2nd in parish</td>
+                <td id="about">9-6-3 (4-1-0)</td>
+              </tr>
+              <tr>
+                <td id="about">2017-2018</td>
+                <td id="about">1st in parish</td>
+                <td id="about">?-?-? (?-?-?)</td>
+              </tr>
+              <tr>
+                <td id="about">2016-2017</td>
+                <td id="about">??? in parish</td>
+                <td id="about">?-?-? (?-?-?)</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+        <div class="AbtSchool">
+          <div class="AbtSchoolTitle">
+            The coaches
+          </div>
+          <div class="AbtCoachesText">
+            <div class="headCoach">
+              <div style="font-weight:bold">Head Coach:</div>
+              <div style="font-weight:normal">
+                Melanie Chacon
+              </div>
+              <div class="abtCoachesImg">
+                insert image here
+              </div>
+            </div>
+            <div class="headCoach">
+              <div style="font-weight:bold">Assistant Coach:</div>
+              <div style="font-weight:normal">
+                ?? Chacon
+              </div>
+              <div class="abtCoachesImg">
+                insert image here
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
