2nd update to about page

--- a/MJHSoccer/Code/about.html
+++ b/MJHSoccer/Code/about.html
@@ -112,7 +112,12 @@
             We are a historically good soccer program having fun and representing our school.
             <br>
             <br />
-            The past _ years we have secured top _ every year.
+            The past 2* years we have secured top 2* every year.
+            <br>
+            <br>
+            <div style="font-style:italic;font-size:10px">
+              *Change when more is learned regarding previous finishes
+            </div>
           </div>
         </div>
         <div class="AbtSchool">
@@ -131,13 +136,14 @@
           </div>
         </div>
         <div class="AboutCol">
-          <div class="Previous results">
+          <div class="Previousresults">
             <div style="font-weight:bold">Previous results:</div>
+            <br>
             <table>
               <tr>
-                <th>Year</th>
-                <th>Result</th>
-                <th>Record</th>
+                <td id="aboutHead">Year</td>
+                <td id="aboutHead">Result</td>
+                <td id="aboutHead">Record</td>
               </tr>
               <tr>
                 <td id="about">2018-2019</td>
@@ -154,6 +160,36 @@
                 <td id="about">??? in parish</td>
                 <td id="about">?-?-? (?-?-?)</td>
               </tr>
+              <tr>
+                <td id="about">2015-2016</td>
+                <td id="about">??? in parish</td>
+                <td id="about">?-?-? (?-?-?)</td>
+              </tr>
+              <tr>
+                <td id="about">2014-2015</td>
+                <td id="about">??? in parish</td>
+                <td id="about">?-?-? (?-?-?)</td>
+              </tr>
+              <tr>
+                <td id="about">2013-2014</td>
+                <td id="about">??? in parish</td>
+                <td id="about">?-?-? (?-?-?)</td>
+              </tr>
+              <tr>
+                <td id="about">2012-2013</td>
+                <td id="about">??? in parish</td>
+                <td id="about">?-?-? (?-?-?)</td>
+              </tr>
+              <tr>
+                <td id="about">2011-2012</td>
+                <td id="about">??? in parish</td>
+                <td id="about">?-?-? (?-?-?)</td>
+              </tr>
+              <tr>
+                <td id="about">2010-2011</td>
+                <td id="about">??? in parish</td>
+                <td id="about">?-?-? (?-?-?)</td>
+              </tr>
             </table>
           </div>
         </div>
@@ -163,6 +199,7 @@
           </div>
           <div class="AbtCoachesText">
             <div class="headCoach">
+              <br>
               <div style="font-weight:bold">Head Coach:</div>
               <div style="font-weight:normal">
                 Melanie Chacon
@@ -172,9 +209,10 @@
               </div>
             </div>
             <div class="headCoach">
+              <br>
               <div style="font-weight:bold">Assistant Coach:</div>
               <div style="font-weight:normal">
-                ?? Chacon
+                Danny Chacon
               </div>
               <div class="abtCoachesImg">
                 insert image here
