--- a/MJHSoccer/Code/pictures.html
+++ b/MJHSoccer/Code/pictures.html
@@ -108,7 +108,7 @@
       <div class="pictures-column">
         <div class="pictures">
           <div class="heading1">
-            NO GAMES PLAYED | NO PICTURES
+            TRYOUTS DATE: To Be Announced | No pictures
           </div>
           <div class="PicturesCol">
             <div class="AllImages">Insert Image Here</div>
