--- a/MJHSoccer/Code/roster.html
+++ b/MJHSoccer/Code/roster.html
@@ -107,7 +107,7 @@
     <div class="heading">2019-2020 Roster</div>
 
     <div class="heading1">
-      TEAM NOT MADE | TRYOUTS NOT HOSTED
+      TRYOUTS DATE: To Be Announced | No players on team
     </div>
 
     <div class="rosterColumn">
