--- a/MJHSoccer/Code/schedule.html
+++ b/MJHSoccer/Code/schedule.html
@@ -106,6 +106,9 @@
     <div class="content-wrapper">
       <div class="heading">2019-2020 Matches</div>
 
+      <div class="heading1">
+        TRYOUTS DATE: To Be Announced | No games played
+      </div>
       <div class="schedule-column">
         <div class="schedule">
           <table>
