--- a/MJHSoccer/Code/the-team.html
+++ b/MJHSoccer/Code/the-team.html
@@ -106,7 +106,7 @@
     <div class="content-wrapper">
       <div class="heading">THE TEAM</div>
 
-      <div class="heading1">TRYOUTS NOT HOSTED | TEAM NOT MADE</div>
+      <div class="heading1">TRYOUTS DATE: To Be Announced</div>
       <div class="two-columns-even">
         <div class="next-gameT">
           Next game: TBD<br /><br />DATE: TBD<br /><br />Type of game: N/A
