--- a/MJHSoccer/Code/index.html
+++ b/MJHSoccer/Code/index.html
@@ -145,6 +145,11 @@
           Coming soon...
         </div>
       </div>
+      <div class="donate" style="text-align:center">
+        <button class="DonateButton" onclick="location.href='donate.html'">
+          DONATE
+        </button>
+      </div>
     </div>
   </div>
   <div class="linksTeam">
