--- a/MJHSoccer/Code/about.html
+++ b/MJHSoccer/Code/about.html
@@ -47,7 +47,7 @@
 
         <div class="nav-link-wrapper-drops">
           <button class="Team">
-            Previous Team
+            Previous Teams
             <i class="fa fa-caret-down"></i>
           </button>
           <ul class="nav-link-wrapper-down">
@@ -125,14 +125,16 @@
             About the school
           </div>
           <div class="AbtSchoolText">
-            Mandeville Junior High is located in Mandeville, Louisiana. We are a public school often ranked top 5 in education in the state.
-            <br>
-            Their website can be located at <a href="http://mandevillejunior.stpsb.org" style="color:white">mandevillejunior.stpsb.org</a>.
-            <br>
-            <br />
-            We are located in the St. Tammany Parish School District, which is often ranked among the top 5 school districts in the state.
-            <br>
-            Their website can be found at <a href="http://stpsb.org" style="color:white">stpsb.org</a>.
+            <div class="abtSchoolLinks">
+              Mandeville Junior High is located in Mandeville, Louisiana. We are a public school often ranked top 5 in education in the state.
+              <br>
+              Their website can be located at <a href="http://mandevillejunior.stpsb.org">mandevillejunior.stpsb.org</a>.
+              <br>
+              <br>
+              We are located in the St. Tammany Parish School District, which is often ranked among the top 5 school districts in the state.
+              <br>
+              Their website can be found at <a href="http://stpsb.org">stpsb.org</a>.
+            </div>
           </div>
         </div>
         <div class="AboutCol">
