--- a/MJHSoccer/Code/matches1819.html
+++ b/MJHSoccer/Code/matches1819.html
@@ -50,7 +50,7 @@
 
         <div class="nav-link-wrapper-drops">
           <button class="Team">
-            Previous Team
+            Previous Teams
             <i class="fa fa-caret-down"></i>
           </button>
           <ul class="nav-link-wrapper-down">
