--- a/MJHSoccer/Code/roster.html
+++ b/MJHSoccer/Code/roster.html
@@ -48,7 +48,7 @@
 
         <div class="nav-link-wrapper-drops">
           <button class="Team">
-            Previous Team
+            Previous Teams
             <i class="fa fa-caret-down"></i>
           </button>
           <ul class="nav-link-wrapper-down">
@@ -131,7 +131,7 @@
           </ul>
         </div>
         <div class="MidfieldersCol">
-          <div class="heading1">
+          <div class="rosterHeading">
             MIDFIELDERS:
           </div>
           <ul style="list-style-type:disc">
@@ -149,7 +149,7 @@
           </ul>
         </div>
         <div class="DefendersCol">
-          <div class="heading1">
+          <div class="rosterHeadingRight">
             DEFENDERS:
           </div>
           <ul style="list-style-type:disc">
@@ -168,7 +168,7 @@
         </div>
       </div>
       <div class="GoaliesRow">
-        <div class="heading1">
+        <div class="rosterHeading">
           GOALKEEPERS:
         </div>
         <ul style="list-style-type:disc">
