--- a/MJHSoccer/Code/roster1718.html
+++ b/MJHSoccer/Code/roster1718.html
@@ -49,7 +49,7 @@
 
         <div class="nav-link-wrapper-drops">
           <button class="Team">
-            Previous Team
+            Previous Teams
             <i class="fa fa-caret-down"></i>
           </button>
           <ul class="nav-link-wrapper-down">
@@ -128,7 +128,7 @@
           </ul>
         </div>
         <div class="MidfieldersCol">
-          <div class="heading1">
+          <div class="rosterHeading">
             MIDFIELDERS:
           </div>
           <ul style="list-style-type:disc">
@@ -146,7 +146,7 @@
           </ul>
         </div>
         <div class="DefendersCol">
-          <div class="heading1">
+          <div class="rosterHeadingRight">
             DEFENDERS:
           </div>
           <ul style="list-style-type:disc">
@@ -165,7 +165,7 @@
         </div>
       </div>
       <div class="GoaliesRow">
-        <div class="heading1">
+        <div class="rosterHeading">
           GOALKEEPERS:
         </div>
         <ul style="list-style-type:disc">
